Add dependencies to Makefile

--- a/arm64/Makefile
+++ b/arm64/Makefile
@@ -1,2 +1,4 @@
-build:
-	docker build --build-arg njobs=$(nproc) -t tensorflow-arm-tk .
+NO_OF_THREADS := $(shell nproc)
+
+Dockerfile: scripts/update-cpython.sh
+	docker build --build-arg njobs=$(NO_OF_THREADS) -t tensorflow-arm-tk .
